--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                             <p style="text-align: justify;">O Treinamento Mercado de Capitais 2022&nbsp;da LPB, &eacute; o mais completo curso de Finanças existente no Brasil. O treinamento abrange deis do basico de finanças até 
                             ao avançado, incluindo operações praticas.</p>
 
-<h3 style="text-align: justify;">Certifica&ccedil;&atilde;o LYCP - LPB Financie</h3>
+<h3 style="text-align: justify;">Certifica&ccedil;&atilde;o LYCP - LPB Finance</h3>
 
 <p style="text-align: justify;">Ao final dos estudos o aluno poderá se submeter a uma certificação prática, todos os alunos têm direito a 1 voucher da certificação.
     Nela você será contratado por uma empresa fictícia para fazer uma analise de como está a economia e quais ativos deverá então investir tudo isso em um ambiente corporativo realístico com sistemas reais e elaborar um relatório de investimento nos padrões atuais de mercado.</p>
